# competitions_FastAPI

./: .dockerignore  .env.example  .flake8  .gitignore  Docker-compose.yml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2024_02_07_1706-4523681363a0_create_sports_table.py  2024_02_07_1735-4d7c40233d4e_create_athletes_table.py  2024_02_08_1319-95ebac8275c8_create_tournament_table.py  2024_02_08_1326-14931a74d135_create_tournament_athlete_association_.py  2024_02_08_1637-0b6473774550_added_name_in_tournament_table.py
src/: config.py  database.py  exceptions.py  main.py
src/athletes/: models.py  router.py  schemas.py  service.py
src/competitions/: router.py
src/tournaments/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_athletes.py  test_tournaments.py
